chore: get aal goals by play against id
