# docs/api.yaml
@@ -37,6 +37,23 @@ paths:
                 $ref: '#/components/schemas/PlayAgain'
         '500':
           description: Internal server error
+  /play_against/{id}/goals:
+    get:
+      tags:
+        - PlayAgainst
+      summary: get all goals by play against id
+      operationId: getGoalByPlayAgainstId
+      responses:
+        '200':
+          description: List of goals by play against id
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Goal'
+        '500':
+          description: Internal server error
 
   /teams:
     get:
@@ -119,7 +136,7 @@ paths:
       tags:
         - Goals
       summary: get all goals
-      operationId: findAllGoals
+      operationId: getAllGoals
       responses:
         '200':
           description: List of goals
@@ -136,7 +153,7 @@ paths:
       tags:
         - Goals
       summary: get goal by id
-      operationId: findGoalById
+      operationId: getGoalById
       responses:
         '200':
           description: Goal
